--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ julia:
   - nightly
 notifications:
   email: false
+after_success:
+  - julia -e 'Pkg.add("Documenter")'  
+  - julia -e 'cd(Pkg.dir("CoupledFields")); include(joinpath("docs", "make.jl"))'
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
