--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name:        CoupledFields.jl
 repo_url:         https://github.com/Mattriks/CoupledFields.jl
-site_description: Description...
+site_description: Package for working with coupled fields
 site_author:      Mattriks
 
 theme: readthedocs
@@ -22,3 +22,7 @@ docs_dir: 'build'
 
 pages:
   - Home: 'index.md'
+  - Guide:
+    - Example 1: 'man/Example1.md'
+    - Example 2: 'man/Example2.md'
+  - Library: 'lib/library.md'
