--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,12 @@ version = "0.2.0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+LazyGrids = "7031d0ef-c40d-4431-b2f8-61a8d2f650db"
 
 [compat]
 StatsBase = "0.30, 0.31, 0.32, 0.33"
-julia = "1"
+LazyGrids = "0.4"
+julia = "1.6"
 
 
 [extras]
